# kandy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: splash.sh
.claude/agents/: kandy-researcher.md  model-quality-assessor.md
.github/workflows/: python-publish.yml
examples/: adaptive_kuramoto_example.py  burgers_example.py  burgers_fourier_example.py  henon_example.py  hopf_example.py  ieeg_example.py  ieeg_relu_gated.py  ikeda_example.py  kuramoto_example.py  kuramoto_sivashinsky_example.py  lorenz_example.py  pdefind_baseline.py  sindy_baselines.py
ieeg_experiments/: EXPERIMENT_INDEX.md  README.md
ieeg_experiments/00_overview/: ieeg_lessons.md
ieeg_experiments/01_mode0_duffing/: ieeg_example.py  ieeg_relu_gated.py
knowledge/: user_preference.txt
model/: 0.0_config.yml  0.0_state  0.1_cache_data  0.1_config.yml  0.2_cache_data  0.2_config.yml  0.3_cache_data  0.3_config.yml  history.txt
notes/: MEMORY.md  adaptive_kuramoto.md  ieeg.md  ieeg_duffing_relu_2026-03-12.md  ikeda.md  ks.md  kuramoto.md  pdefind_comparison.md
outputs/: advisor_feedback.md  audit_report.md  experiment_Lorenz.py  ikeda_fixed.py  kane_report.md  kuramoto_fixed.py  package_design.md  review.md  run_report.md
research_code/: Inviscd-Burgers-fourier-mode-ics.py  Inviscid_Burgers.ipynb  Inviscid_Burgers.py  KANDy_KANE.ipynb  KANDy_KANE.py  Kuramoto–Sivashinsky (1).py  Lorenz (3).ipynb  Lorenz (3).py  Lorenz.ipynb  Navier-Stokes.py  adaptive_kuramoto (2).py  burgers_fourier_baselines.py  henon.py  holling_type_ii.py  hopf.py  ikeda_good.py
tests/: test_kandy.py
(+70 files in other folders)
