[project]
name = "kandy"
version = "0.1.0"
description = "KANDy: Kolmogorov-Arnold Networks for Dynamics"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    # KANDy scientific stack
    "pykan>=0.2.0",
    "torch>=2.0",
    "scipy>=1.10",
    "sympy>=1.12",
    "numpy>=1.24",
    "matplotlib>=3.7",
    # Baselines (SINDy, PDEFind)
    "pysindy>=1.7",
    "scikit-learn>=1.3",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "pandas>=3.0.1",
]

[project.scripts]
kandy = "kandy.main:run"
kandy-baselines = "kandy.main:run_baselines"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
